Quick Fix: First-Join Room List Alignment

--- a/style/stylesheets/betterttv-hide-group-chat.css
+++ b/style/stylesheets/betterttv-hide-group-chat.css
@@ -7,3 +7,6 @@
 .ember-chat .chat-room {
 	top: 0px;
 }
+.ember-chat .chat-rooms{
+    top: 0px;
+}
